--- a/viewer/styles/main.css
+++ b/viewer/styles/main.css
@@ -64,6 +64,7 @@ span, div, p, section, header, h1, h2, li, ul {
   --subheading-font-size: 16px;
   --subheading-line-height: 20px;
   --subheading-color: inherit;
+  --report-header-height: 0;
   --heading-font-size: 20px;
   --heading-line-height: 24px;
   --subitem-indent: 24px;
@@ -76,6 +77,7 @@ html {
   line-height: 1;
   margin: 0;
   padding: 0;
+  min-width: 455px;
 }
 
 html, body {
@@ -869,11 +871,16 @@ body {
 }
 
 :root[data-report-context="devtools"] .report {
-  margin: 0;
+  margin: 10px 10px;
+  padding: 10px;
   box-shadow: none;
   max-width: none;
+  width: auto;
 }
 
+:root[data-report-context="devtools"] .report-body__aggregations-container > section:first-child {
+  padding-top: calc(var(--heading-line-height) / 3);
+}
 :root[data-report-context="devtools"] .report-body__menu-container {
   display: none;
 }
@@ -943,6 +950,7 @@ body {
   border-radius: 5px;
   padding: 25px;
   width: 33vw;
+  min-width: 250px;
   height: 20vh;
   display: flex;
   align-items: center;
@@ -961,7 +969,7 @@ body {
   display: flex;
   align-items: center;
   border-radius: 5px;
-  padding: 40px 32px;
+  padding: 16px;
   max-width: 80vw;
   border: 2px dashed rgba(0,0,0,0.2);
   cursor: pointer;
@@ -976,10 +984,18 @@ body {
 }
 .viewer-placeholder__help {
   margin-top: 12px;
+  line-height: 1.6;
 }
 .viewer-placeholder-logo {
-  width: 100px;
-  height: 100px;
+  width: 140px;
+  height: 140px;
+}
+.viewer-placeholder__url {
+  padding: 8px;
+  width: 100%;
+  border: 1px solid #eee;
+  margin-top: 16px;
+  display: none;
 }
 .log-wrapper {
   position: fixed;
@@ -1019,11 +1035,14 @@ body {
     width: 100px;
     height: 100px;
   }
+  .viewer-placeholder__url {
+    display: block;
+  }
 }
 
 @media screen and (min-width: 636px) {
-  .viewer-placeholder__help::before {
-    content: 'Instructions: ';
+  .viewer-placeholder-inner {
+    padding: 40px 32px;
   }
   .viewer-placeholder-logo {
     margin-right: 16px;
