--- a/viewer/styles/viewer.css
+++ b/viewer/styles/viewer.css
@@ -1319,6 +1319,7 @@ summary {
 .table_list .table-column.table-column-url {
   text-align: left;
   width: 250px;
+  white-space: nowrap;
 }
 .table-column-potential-savings em, .table-column-webp-savings em, .table-column-jpeg-savings em {
   color: #767676;
