--- a/viewer/styles/viewer.css
+++ b/viewer/styles/viewer.css
@@ -928,5 +928,5 @@ summary.lh-passed-audits-summary::-webkit-details-marker,
 
 /* open-in-gist option visible in Viewer */
 .lh-export__dropdown .lh-export--gist {
-  display: block;
+  display: block !important;
 }
