extension: polish the status updates within the popup (#4780)
* log an excerpt of the Gatherer list
* avoid the vertical jiggle when status is being updated.

--- a/lighthouse-extension/app/styles/lighthouse.css
+++ b/lighthouse-extension/app/styles/lighthouse.css
@@ -149,7 +149,7 @@ html, body {
 
 .status {
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   background-color: #fff;
 }
 
