--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -328,54 +328,54 @@ summary {
 
 /* Perf Timeline Metric */
 
-.lh-metrics-container {
+.lh-metric-container {
   display: flex;
 }
 
-.lh-metrics-column {
+.lh-metric-column {
   flex: 1;
   margin-right: 20px;
 }
 
-.lh-perf-metric {
+.lh-metric {
   border-top: 1px solid var(--report-secondary-border-color);
 }
 
-.lh-perf-metric__innerwrap {
+.lh-metric__innerwrap {
   display: flex;
   justify-content: space-between;
   margin: var(--lh-audit-vpadding) 0;
   padding: var(--lh-audit-vpadding) var(--text-indent);
 }
 
-.lh-perf-metric__header {
+.lh-metric__header {
   display: flex;
 }
 
-.lh-perf-metric__details {
+.lh-metric__details {
   order: -1;
 }
 
-.lh-perf-metric__title {
+.lh-metric__title {
   font-size: var(--body-font-size);
   line-height: var(--body-line-height);
   display: flex;
 }
 
-.lh-perf-metric__name {
+.lh-metric__name {
   flex: 1;
 }
 
-.lh-perf-metric__description {
+.lh-metric__description {
   color: var(--secondary-text-color);
 }
 
 
-.lh-perf-metric--pass .lh-perf-metric__value {
+.lh-metric--pass .lh-metric__value {
   color: var(--pass-color);
 }
 
-.lh-perf-metric .lh-perf-metric__value::after {
+.lh-metric .lh-metric__value::after {
   content: '';
   width: var(--body-font-size);
   height: var(--body-font-size);
@@ -385,121 +385,122 @@ summary {
   margin-left: calc(var(--body-font-size) / 2);
 }
 
-.lh-perf-metric--pass .lh-perf-metric__value::after {
+.lh-metric--pass .lh-metric__value::after {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>check</title><path fill="hsl(139, 70%, 30%)" d="M24 4C12.95 4 4 12.95 4 24c0 11.04 8.95 20 20 20 11.04 0 20-8.96 20-20 0-11.05-8.96-20-20-20zm-4 30L10 24l2.83-2.83L20 28.34l15.17-15.17L38 16 20 34z"/></svg>') no-repeat 50% 50%;
 }
 
 
-.lh-perf-metric--average .lh-perf-metric__value {
+.lh-metric--average .lh-metric__value {
   color: var(--average-color);
 }
-.lh-perf-metric--average .lh-perf-metric__value::after {
+.lh-metric--average .lh-metric__value::after {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>info</title><path fill="hsl(31, 100%, 45%)" d="M24 4C12.95 4 4 12.95 4 24s8.95 20 20 20 20-8.95 20-20S35.05 4 24 4zm2 30h-4V22h4v12zm0-16h-4v-4h4v4z"/></svg>') no-repeat 50% 50%;
 }
 
 
-.lh-perf-metric--fail .lh-perf-metric__value {
+.lh-metric--fail .lh-metric__value {
   color: var(--fail-color);
 }
-.lh-perf-metric--fail .lh-perf-metric__value::after {
+
+.lh-metric--fail .lh-metric__value::after {
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><title>warn</title><path fill="hsl(1, 73%, 45%)" d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z"/></svg>') no-repeat 50% 50%;
 }
 
-.lh-perf-metric--error .lh-perf-metric__value,
-.lh-perf-metric--error .lh-perf-metric__description {
+.lh-metric--error .lh-metric__value,
+.lh-metric--error .lh-metric__description {
   color: var(--fail-color);
 }
 
 /* Hide icon if there was an error */
-.lh-perf-metric--error .lh-perf-metric__value::after {
+.lh-metric--error .lh-metric__value::after {
   display: none;
 }
 
-/* Perf Hint */
+/* Perf load opportunity */
 
-.lh-perf-hint {
+.lh-load-opportunity {
   padding-top: var(--lh-audit-vpadding);
   padding-bottom: var(--lh-audit-vpadding);
   border-top: 1px solid var(--report-secondary-border-color);
 }
 
-.lh-perf-hint:last-of-type {
+.lh-load-opportunity:last-of-type {
   border-bottom: none;
 }
 
-.lh-perf-hint__summary {
+.lh-load-opportunity__summary {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
   min-height: calc(var(--body-line-height) + var(--caption-line-height));
 }
 
-.lh-perf-hint__summary .lh-toggle-arrow {
+.lh-load-opportunity__summary .lh-toggle-arrow {
   margin-top: calc((var(--subheader-line-height) - 12px) / 2);
 }
 
-.lh-perf-hint__summary .lh-debug {
+.lh-load-opportunity__summary .lh-debug {
   width: calc(100% - var(--expandable-indent));
   margin: 0 var(--expandable-indent);
 }
 
-.lh-perf-hint__title {
+.lh-load-opportunity__title {
   font-size: var(--body-font-size);
   flex: 10;
 }
 
-.lh-perf-hint__sparkline {
+.lh-load-opportunity__sparkline {
   flex: 0 0 50%;
   margin-top: calc((var(--body-line-height) - var(--lh-sparkline-height)) / 2);
 }
 
-.lh-perf-hint__sparkline .lh-sparkline {
+.lh-load-opportunity__sparkline .lh-sparkline {
   width: 100%;
   float: right;
   margin: 0;
 }
 
-.lh-perf-hint__stats {
+.lh-load-opportunity__stats {
   text-align: right;
   flex: 0 0 var(--lh-audit-score-width);
 }
 
-.lh-perf-hint__primary-stat {
+.lh-load-opportunity__primary-stat {
   font-size: var(--body-font-size);
   line-height: var(--body-line-height);
 }
 
-.lh-perf-hint__secondary-stat {
+.lh-load-opportunity__secondary-stat {
   font-size: var(--caption-font-size);
   line-height: var(--caption-line-height);
 }
 
-.lh-perf-hint__description {
+.lh-load-opportunity__description {
   color: var(--secondary-text-color);
   margin-top: calc(var(--default-padding) / 2);
 }
 
-.lh-perf-hint--pass .lh-perf-hint__stats {
+.lh-load-opportunity--pass .lh-load-opportunity__stats {
   color: var(--pass-color);
 }
 
-.lh-perf-hint--pass .lh-sparkline__bar {
+.lh-load-opportunity--pass .lh-sparkline__bar {
   background: var(--pass-color);
 }
 
-.lh-perf-hint--average .lh-sparkline__bar {
+.lh-load-opportunity--average .lh-sparkline__bar {
   background: var(--average-color);
 }
 
-.lh-perf-hint--average .lh-perf-hint__stats {
+.lh-load-opportunity--average .lh-load-opportunity__stats {
   color: var(--average-color);
 }
 
-.lh-perf-hint--fail .lh-sparkline__bar {
+.lh-load-opportunity--fail .lh-sparkline__bar {
   background: var(--fail-color);
 }
 
-.lh-perf-hint--fail .lh-perf-hint__stats {
+.lh-load-opportunity--fail .lh-load-opportunity__stats {
   color: var(--fail-color);
 }
 
@@ -561,7 +562,7 @@ summary {
 }
 
 /* correlate metric end location with sparkline */
-.lh-perf-metric:hover .lh-sparkline__bar::after {
+.lh-metric:hover .lh-sparkline__bar::after {
   content: '';
   height: 100vh;
   width: 2px;
